WIP for lazy loading trees

--- a/public/app/views/records/_components.html.erb
+++ b/public/app/views/records/_components.html.erb
@@ -1,95 +1,4 @@
-<%
-   components = whole_tree? ? whole_tree['children'] : children
-   show_full_component = defined?(show_full_component) ? show_full_component : false
-%>
 
+<ul class="record-tree" data-root-uri="<%= root_uri %>">
 
-<% node_id = 0; %>
-<% show_node = lambda do |child, stripe| %>
-<% node_id += 1 %>
-<li class="result <% if stripe %>striped<% else %>unstriped<% end %>">
-  <h4>
-    <% if show_full_component %>
-      <a class="collapsible-toggle collapsed" href="#<%= "node#{node_id}" %>">
-        <span class="icon-chevron-right"></span>
-        <span class="icon-chevron-down"></span>
-      </a>
-    <% end %>
-    <%= icon_for child["node_type"] %>
-    <%= link_to child["title"], :controller => :records, :action => child["node_type"] || child["jsonmodel_type"], :id => child['id'] || JSONModel(child["jsonmodel_type"].intern).id_for(child['uri']), :repo_id => @repository.id %>
-  </h4>
-  <div id="<%= "node#{node_id}" %>" class="collapsible-panel collapsed">
-    <% if show_full_component %>
-      <div class="component-view">
-        <% if child['fullrecord'] %>
-          <%= render :partial => "archival_object",
-                     :locals => {
-                       :archival_object => ArchivalObjectView.new(child['fullrecord']),
-                       :show_components => false
-                     } %>
-        <% end %>
-      </div>
-    <% end %>
-    <% if !child['children'].blank? %>
-      <section>
-        <% if show_full_component %>
-          <div class="component-view">
-            <h4><%= I18n.t("#{child['node_type']}._public.section.components") %></h4>
-          </div>
-        <% end %>
-        <ul class="results-list">
-          <%
-             child['children'].each_with_index do |subchild, i|
-               show_node.call(subchild, ((i % 2) == 0) != stripe)
-             end
-          %>
-        </ul>
-      </section>
-    <% end %>
-  </div>
-</li>
-<% end %>
-
-<% unless components.blank? %>
-  <section id="components">
-    <h3>
-      <%= I18n.t("#{record_type}._public.section.components") %>
-
-      <% if show_full_component %>
-        <div class="btn-group pull-right">
-          <button id="collapse-all-btn" class="btn btn-mini expand-collapse-btn"><%= I18n.t('components.collapse') %></button>
-          <button id="expand-all-btn" class="btn btn-mini expand-collapse-btn"><%= I18n.t('components.expand') %></button>
-        </div>
-      <% end %>
-    </h3>
-
-    <ul class="results-list">
-      <% components.each_with_index do |child, i| %>
-        <% show_node.call(child, (i % 2) == 0) %>
-      <% end %>
-    </ul>
-  </section>
-<% end %>
-
-
-
-<script type="text/javascript">
-  document.ready = function (e) {
-    $(".collapsible-toggle").on("click", function(event) {
-      event.preventDefault();
-
-      $($(this).attr("href")).toggleClass("collapsed");
-      $(this).toggleClass("collapsed")
-    });
-
-    $('#expand-all-btn').on('click', function () {
-      $(".collapsible-toggle, .collapsible-panel").removeClass("collapsed");
-
-    });
-
-    $('#collapse-all-btn').on('click', function () {
-      $(".collapsible-toggle, .collapsible-panel").addClass("collapsed");
-    });
-  };
-</script>
-
+</ul>
