--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -61,6 +61,7 @@
         <%= render :partial => "instances", :locals => {:instances => @resource.instances} %>
         <%= render :partial => "components", :locals => {
               :record_type => "resource",
+              :root_uri => @resource.uri,
               :show_full_component => true
             } %>
       </fieldset>
