Fix error if tree hasn't been indexed yet. Also show components in the resource navlist

--- a/public/app/views/records/_components.html.erb
+++ b/public/app/views/records/_components.html.erb
@@ -1,12 +1,18 @@
-<ul class="record-tree" data-root-uri="<%= root_uri %>">
+<section id="components">
+  <h3><%= I18n.t("#{record_type}._public.section.components") %></h3>
 
-</ul>
+  <ul class="record-tree" data-root-uri="<%= root_uri %>"></ul>
+</section>
 
 <div id="template_record_tree_node"><!--
   <li class="record-tree-node" data-uri="${record_uri}">
     {if has_children}<a href="#" class="record-tree-node-toggle">Toggle</a>{/if}
     <span class="icon icon-${node_type}"></span>
-    <span class="record-tree-node-title">${title}</span>
+    <a href="${record_uri}" class="record-tree-node-title">${title}</a>
     {if has_children}<ul class="record-sub-tree"></ul>{/if}
   </li>
+--></div>
+
+<div id="template_record_tree_empty"><!--
+  <%= I18n.t("#{record_type}._public.messages.no_components") %>
 --></div>
