--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -21,6 +21,7 @@
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
                      {:property => 'published_related_accessions', :subrecord_type => 'accession', :anchor => 'accessions'},
                      {:property => 'instances', :subrecord_type => 'instance', :anchor => 'instances'},
+                     {:anchor => 'components', :label => I18n.t("resource._public.section.components")}
                    ]
                  })
        %>
