--- a/public/app/views/records/digital_object.html.erb
+++ b/public/app/views/records/digital_object.html.erb
@@ -45,7 +45,11 @@
         <%= render :partial => "notes", :locals => {:notes => @digital_object.published_notes} %>
         <%= render :partial => "external_documents", :locals => {:external_documents => @digital_object.published_external_documents} %>
         <%= render :partial => "linked_instances", :locals => {:records => @digital_object.published_linked_instances} %>
-        <%= render :partial => "components", :locals => {:record_type => "digital_object"} %>
+        <%= render :partial => "components", :locals => {
+              :record_type => "digital_object",
+              :root_uri => @digital_object.uri,
+            } %>
+
       </fieldset>
 
       <br/>
