--- a/public/app/views/records/digital_object_component.html.erb
+++ b/public/app/views/records/digital_object_component.html.erb
@@ -43,7 +43,11 @@
         <%= render :partial => "subjects", :locals => {:subjects => @digital_object_component['subjects']} %>
         <%= render :partial => "notes", :locals => {:notes => @digital_object_component.published_notes} %>
         <%= render :partial => "external_documents", :locals => {:external_documents => @digital_object_component.published_external_documents} %>
-        <%= render :partial => "components", :locals => {:record_type => "digital_object_component"} %>
+
+        <%= render :partial => "components", :locals => {
+              :record_type => "digital_object_component",
+              :root_uri => @digital_object_component.uri,
+            } %>
 
       </fieldset>
 
