--- a/public/app/views/records/_components.html.erb
+++ b/public/app/views/records/_components.html.erb
@@ -5,8 +5,8 @@
 </section>
 
 <div id="template_record_tree_node"><!--
-  <li class="record-tree-node" data-uri="${record_uri}">
-    {if has_children}<a href="#" class="record-tree-node-toggle">Toggle</a>{/if}
+  <li class="record-tree-node {if has_children} has-children{else} no-children{/if}" data-uri="${record_uri}">
+    {if has_children}<a href="#" class="record-tree-node-toggle"><span class="record-tree-node-toggle-icon"></span></a>{/if}
     <span class="icon icon-${node_type}"></span>
     <a href="${record_uri}" class="record-tree-node-title">${title}</a>
     {if has_children}<ul class="record-sub-tree"></ul>{/if}
