--- a/public/app/views/records/digital_object.html.erb
+++ b/public/app/views/records/digital_object.html.erb
@@ -21,6 +21,7 @@
                      {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_linked_instances', :subrecord_type => 'instance', :anchor => 'linked_instances'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
+                     {:anchor => 'components', :label => I18n.t("digital_object._public.section.components")}
                    ]
                  })
        %>
