--- a/public/app/views/records/digital_object_component.html.erb
+++ b/public/app/views/records/digital_object_component.html.erb
@@ -20,7 +20,8 @@
                      {:property => 'subjects', :subrecord_type => 'subject', :anchor => 'subjects'},
                      {:property => 'published_notes', :subrecord_type => 'note', :anchor => 'notes'},
                      {:property => 'published_external_documents', :subrecord_type => 'external_document', :anchor => 'external_documents'},
-                   ]
+                     {:anchor => 'components', :label => I18n.t("digital_object_component._public.section.components")}
+                  ]
                  })
        %>
     </div>
