Add APP_PATH to support prefix

--- a/public/app/views/layouts/application.html.erb
+++ b/public/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
   <script>
     FRONTEND_URL = "<%= j(AppConfig[:frontend_proxy_url]) %>";
     PUBLIC_URL = "<%= j(AppConfig[:public_proxy_url]) %>";
+    APP_PATH = "<%= j(root_path) %>";
   </script>
 
 </head>
