--- a/public/app/views/records/_components.html.erb
+++ b/public/app/views/records/_components.html.erb
@@ -16,3 +16,7 @@
 <div id="template_record_tree_empty"><!--
   <%= I18n.t("#{record_type}._public.messages.no_components") %>
 --></div>
+
+<div id="template_record_tree_loading"><!--
+  <li><%= image_tag "archivesspace/record_tree_loading.gif" %></li>
+--></div>
