Add a drag and drop hint to the job's file container

--- a/frontend/app/assets/stylesheets/archivesspace/jobs.less
+++ b/frontend/app/assets/stylesheets/archivesspace/jobs.less
@@ -35,6 +35,17 @@
 
   border: 2px dashed #F3F3F3;
 
+  .hint {
+    width: 300px;
+    margin: 40px auto;
+    font-size: 1.4em;
+    color: #DDD;
+
+    .plus {
+      font-size: 1.4em;
+    }
+  }
+
   &.incoming {
     border: 2px dashed #7DF;
   }
