Use the HTML5 input#file multiple upload feature for browsers that can handle it

--- a/frontend/app/views/jobs/_form.html.erb
+++ b/frontend/app/views/jobs/_form.html.erb
@@ -3,7 +3,7 @@
     <span class="btn btn-success btn-small fileinput-button">
       <span class="icon icon-plus icon-white"></span>
       <span><%= I18n.t("job._frontend.actions.add_file") %></span>
-      <input type="file" name="files[]">
+      <input type="file" name="files[]" multiple="multiple">
     </span>
     <div id="files">
       <div class="hint"><span class="plus">+</span> <%= I18n.t("job._frontend.messages.drag_and_drop_hint") %></div>
