Two tweaks that I couldn't resist:
  * Use a 'ref' to store the URI of the record referenced by an index note.  No
    real difference in behaviour, but it would allow people to resolve the
    record if they ever wanted to, and that's how we model inter-record links
    in other places.

  * Tweak the notes mixin to be agnostic about the types it's dealing with.
    Should allow it to work for other tree-based records too.

--- a/public/app/views/records/_notes.html.erb
+++ b/public/app/views/records/_notes.html.erb
@@ -76,8 +76,8 @@
   <dl>
     <% Array(note['items']).each do |index_item| %>
       <dt><%= index_item['value'] %></dt>
-      <% if index_item['reference_uri'] %>
-        <dd><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_uri'] %>"><%= index_item['reference_text'] %></a></dd>
+      <% if index_item['reference_ref'] %>
+        <dd><a href="<%= AppConfig[:public_prefix].gsub(/\/$/, "") %><%= index_item['reference_ref']['ref'] %>"><%= index_item['reference_text'] %></a></dd>
       <% else %>
         <dd><%= index_item['reference_text'] %></dd>
       <% end %>
