--- a/public/app/views/records/_components.html.erb
+++ b/public/app/views/records/_components.html.erb
@@ -3,19 +3,22 @@
     <%= I18n.t("#{record_type}._public.section.components") %>
   </h3>
 
-  <ul class="nav nav-tabs" id="componentsTab">
+  <ul class="nav nav-tabs hide" id="componentsTab">
     <li class="active"><a href="#components_record_tree">Record Tree</a></li>
-    <li><a href="#components_search"><span class="icon icon-search"></span> Search Components</a></li>
+    <li class="components-search"><a href="#components_search"><span class="icon icon-search"></span> Search Components</a></li>
   </ul>
   <div class="tab-content">
     <div id="components_record_tree" class="tab-pane active">
       <ul class="record-tree" data-root-uri="<%= root_uri %>"></ul>
     </div>
     <div id="components_search" class="tab-pane">
-      <div class="input-append">
-        <input type="text" name="components_query"/>
-        <button class="btn"><span class="icon icon-search"></span></button>
-      </div>
+      <%= form_tag url_for(:controller => :search, :action => :search, :format => :js) do %>
+        <div class="input-append">
+          <input type="text" name="q"/>
+          <button class="btn"><span class="icon icon-search"></span></button>
+        </div>
+      <% end %>
+      <div id="components_search_results"></div>
     </div>
   </div>
 </section>
