Ajaxify the agent links to resources a little differently(so pagination/sorting works); Also ensure page and other search params are retained correctly;

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -357,11 +357,19 @@ section {
   box-shadow: inset -1px 0px 3px #CCC;
 }
 
-.record-pane .inset-label {
-  margin: 0 !important;
-  height: 22px;
-  line-height: 22px;
-  font-size: 12px;
+.search-results {
+  .sort-by-action {
+    .input-append {
+      margin-bottom: 0;
+    }
+
+    .inset-label {
+      margin: 0 !important;
+      height: 22px;
+      line-height: 22px;
+      font-size: 12px;
+    }
+  }
 }
 
 /* Filter fields */
