--- a/public/app/views/records/agent.html.erb
+++ b/public/app/views/records/agent.html.erb
@@ -49,8 +49,7 @@
 
         <%= render :partial => "agents", :locals => {:linked_agents => @agent.published_agents, :relating_property => "related_agent"} %>
 
-        <%= render :partial => "search_data_as_subrecord", :locals => {:search_data => @agent.related_resources, :section_id => 'related_resources', :section_header => 'related_resource'} %>
-
+        <%= render :partial => "search_data_as_subrecord", :locals => {:search_url => url_for(:controller => :search, :action => :search, :format => :js, :filter_term => [{"agents" => @agent['title']}.to_json], "type[]" => "resource"), :section_id => 'related_resources', :section_header => 'related_resource'} %>
 
         <%= render :partial => "notes", :locals => {:notes => @agent.published_notes} %>
       </fieldset>
