--- a/public/app/views/search/_inline_results.html.erb
+++ b/public/app/views/search/_inline_results.html.erb
@@ -1,74 +1,35 @@
-<% search_data = @search_data unless search_data %>
-<ul class="results-list">
-  <% search_data['results'].each do |result| %>
-  <% 
-     id = JSONModel(result["primary_type"]).id_for(result['uri'])
-     repo_id = JSONModel(:repository).id_for(JSONModel.repository_for(result['uri']),{}, true)
-     %>
-  <li class="result">
-    <h4>
-      <%= link_to result['finding_aid_title'] || result["title"] || result['display_string'], :controller => :records, :action => result["primary_type"], :id => id, :repo_id => repo_id %>
-    </h4>
-  </li>
-  <% end %>
-</ul>
-
-<%
-  page_limit = 10
-
-  first_page = [search_data['this_page'] - page_limit / 2, 1].max
-  last_page = [first_page+page_limit, search_data['last_page']].min
-
-  search_params = search_data[:criteria].reject {|k,v| k == "facet[]"}
-  search_params.keys.select {|k| k =~ /\[\]$/ }.each do |k| 
-    search_params[k.sub(/\[\]$/, '')] = search_params[k]
-    search_params.delete(k)
-  end
-
-  page_range = (first_page..last_page)
-%>
-
-<div class="pagination pagination-small pagination-centered">
-  <ul>
-    <% if not page_range.cover?(1) %>
-    <li>
-      <%= link_to I18n.t("pagination.first"), {:controller => 'search', :action => 'search'}.merge(search_params).merge('page' => 1), :remote => true %>
-    </li>
-    <% end %>
-
-    <% if search_data['this_page'] > 1 %>
-    <li>
-      <%= link_to I18n.t("pagination.previous").html_safe, {:controller => 'search', :action => 'search'}.merge(search_params).merge('page' => search_data['this_page'] - 1), :remote => true %>
-    </li>
-    <% else  %>
-    <li class="disabled"><a href="#"><%= I18n.t("pagination.previous").html_safe %></a></li>
-    <% end %>
-
-    <% page_range.each do |i| %>
-    <% if search_data['this_page'] === i %>
-    <li class="active"><a href="#"><%= i %></a></li>
-    <% else %>
-    <li>
-      <%= link_to i, {:controller => 'search', :action => 'search'}.merge(search_params).merge('page' => i), :remote => true %>
-    </li>
-    <% end %>
-    <% end %>
-
-    <% if search_data['this_page'] != search_data['last_page'] %>
-    <li>
-      <%= link_to I18n.t("pagination.next").html_safe, {:controller => 'search', :action => 'search'}.merge(search_params).merge('page' => search_data['this_page'] + 1), :remote => true%>
-    </li>
-    <% else %>
-    <li class="disabled"><a href="#"><%= I18n.t("pagination.next").html_safe %></a></li>
-    <% end %>
-    <% if not page_range.cover?(search_data['last_page']) %>
-    <li>
-      <%= link_to I18n.t("pagination.last"), {:controller => 'search', :action => 'search'}.merge(search_params).merge('page' => search_data['last_page']), :remote => true %>
-    </li>
+<div class="search-results">
+<% if search_data.results? %>
+  <%= render :partial => "search/pagination_summary", :locals => {:search_data => search_data} %>
+  <ul class="results-list">
+    <% search_data['results'].each do |result| %>
+      <%
+         id = JSONModel(result["primary_type"]).id_for(result['uri'])
+         repo_id = JSONModel(:repository).id_for(JSONModel.repository_for(result['uri']),{}, true)
+      %>
+      <li class="result">
+        <h3>
+          <%= icon_for result["primary_type"] %>
+          <% if result["primary_type"] === "subject" %>
+            <%= link_to result["title"], {"filter_term" => search_data.facet_query_string("subjects", result["title"])} %>
+          <% elsif ["agent_person", "agent_software", "agent_family", "agent_corporate_entity"].include?(result["primary_type"]) %>
+            <%= link_to result['title'], :controller => :records, :action => :agent, :id => id, :agent_type => result["primary_type"] %>
+          <% elsif result["primary_type"] === "repository" %>
+            <%= link_to result['title'], :controller => :search, :action => :repository, :repo_id => id %>
+          <% else %>
+            <%= link_to result['finding_aid_title'] || result["title"] || result['display_string'], :controller => :records, :action => result["primary_type"], :id => id, :repo_id => repo_id %>
+          <% end %>
+        </h3>
+        <div class="result-summary">
+          <%= render :partial => "search/result_summary_#{result["primary_type"]}", :locals => {:obj => result} %>
+        </div>
+      </li>
     <% end %>
   </ul>
+  <%= render :partial => "search/pagination", :locals => {:search_data => search_data} %>
+<% else %>
+  <p class="alert alert-info">
+    <%= I18n.t("search_results.no_results") %></em>.
+  </p>
+<% end %>
 </div>
-
-
-
-
