--- a/public/app/views/records/digital_object.html.erb
+++ b/public/app/views/records/digital_object.html.erb
@@ -49,6 +49,7 @@
         <%= render :partial => "components", :locals => {
               :record_type => "digital_object",
               :root_uri => @digital_object.uri,
+              :show_search => true
             } %>
 
       </fieldset>
