--- a/public/app/views/records/resource.html.erb
+++ b/public/app/views/records/resource.html.erb
@@ -63,6 +63,7 @@
         <%= render :partial => "components", :locals => {
               :record_type => "resource",
               :root_uri => @resource.uri,
+              :show_search => true,
             } %>
       </fieldset>
 
