refactor CSS layout for resource and accession toolbars

--- a/frontend/app/views/shared/_transfer_dropdown.html.erb
+++ b/frontend/app/views/shared/_transfer_dropdown.html.erb
@@ -6,7 +6,7 @@
 %>
 
 <% if !other_repositories.empty? %>
-  <div id="transfer-dropdown" class="btn-group dropdown" data-no-change-tracking="true">
+  <div id="transfer-dropdown" class="btn btn-inline-form" data-no-change-tracking="true">
     <a class="btn btn-small dropdown-toggle transfer-action" data-toggle="dropdown" href="#" title="<%= I18n.t("actions.transfer") %>">
       <%= I18n.t("actions.transfer") %> <span class="caret"></span>
     </a>
