--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -22,7 +22,12 @@
         <% end %>
         <div class="btn-toolbar pull-right">
           <div class="btn-group">
-          <% if @accession_event_types && !@accession.suppressed %>
+          <% if @accession.publish %>
+            <div class="btn btn-inline-form">
+              <%= link_to I18n.t("actions.view_published"), URI.join(AppConfig[:public_proxy_url], @accession.uri).to_s, :target => "_blank", :class => "btn btn-small" %>
+            </div>
+          <% end %> 
+         <% if @accession_event_types && !@accession.suppressed %>
             <div class="btn btn-inline-form">
               <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);">
                 <%= I18n.t("actions.add_event") %>
