add view_published action to agent toolbar

--- a/frontend/app/views/agents/_toolbar.html.erb
+++ b/frontend/app/views/agents/_toolbar.html.erb
@@ -36,13 +36,18 @@
         <% end %>
 
         <div class="btn-toolbar pull-right">
-          <% if user_can?('delete_agent_record') %>
-            <div class="btn-group">
+          <div class="btn-group">
+            <% if @agent.publish %>
+          	  <div class="btn btn-inline-form">
+                <%= link_to I18n.t("actions.view_published"), URI.join(AppConfig[:public_proxy_url], @agent.uri).to_s, :target => "_blank", :class => "btn btn-small" %>
+              </div>
+            <% end %>
+            <% if user_can?('delete_agent_record') %>
               <div class="btn btn-inline-form">
                 <%= button_delete_action url_for(:controller => :agents, :action => :delete, :id => @agent.id) %>
               </div>
-            </div>
-          <% end %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
