--- a/frontend/app/views/enumerations/index.html.erb
+++ b/frontend/app/views/enumerations/index.html.erb
@@ -12,7 +12,13 @@
           <div class="control-group required">
             <label class="control-label" for="enum_selector"><%= I18n.t("enumeration._frontend.messages.name_selector") %></label>
             <div class="controls">
-              <%= select_tag "enum_selector", options_for_select([""].concat(@enumerations.sort{|a,b| a["name"] <=> b["name"]}.collect{|e| [e["name"], JSONModel(:enumeration).id_for(e["uri"])]}), params[:id]), :style => "width: auto; max-with: 100%;" %>
+              <%
+                enum_options = @enumerations.map {|e|
+                  [sprintf("%s (%s)", I18n.t("enumeration_names.#{e['name']}"), e['name']),
+                   JSONModel(:enumeration).id_for(e["uri"])]
+                }.sort {|a, b| a[0] <=> b[0]}
+              %>
+              <%= select_tag "enum_selector", options_for_select([""].concat(enum_options), params[:id]), :style => "width: auto; max-with: 100%;" %>
             </div>
           </div>
         </fieldset>
