--- a/frontend/app/views/external_documents/_template.html.erb
+++ b/frontend/app/views/external_documents/_template.html.erb
@@ -2,6 +2,10 @@
   <div class="subrecord-form-fields">
     <%= form.label_and_textarea "title" %>
     <%= form.label_and_textarea "location" %>
+    <% loc_uri = (form["location"] || "").slice(URI.regexp) %>
+    <% unless loc_uri.nil? %>
+      <%= form.label_with_field("document_link", link_to(loc_uri, loc_uri, {:target => "_blank"})) %>
+    <% end %>
     <%= form.label_and_boolean "publish", {}, form.default_for("publish") %>
   </div>
 <% end %>
