Don't initialise the session check upon form submit when running the selenium tests

--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 
   <% if ENV["TEST_MODE"] %>
     <script>
+      TEST_MODE = true;
       TEST_ERRORS = [];
       window.onerror = function(errorMsg, url, lineNo) {
         TEST_ERRORS.push({
