Show the identifier of classifications in their tree in the staff interface.

--- a/frontend/app/views/shared/_tree.html.erb
+++ b/frontend/app/views/shared/_tree.html.erb
@@ -129,7 +129,7 @@
 
   <div id="tree_node_classification_template"><!--
     <span class="tree-node-text">
-      <span class="title-column pull-left">${node.title|h}</span>
+      <span class="title-column pull-left">${node.identifier|h}. ${node.title|h}</span>
     </span>
   --></div>
 
