Don't prevent the form submit event unless the has_session check returns false. Make this check not async. And also ensure the check session submit event is bound as the first event (where possible).

--- a/frontend/app/assets/javascripts/tree.js.erb
+++ b/frontend/app/assets/javascripts/tree.js.erb
@@ -55,6 +55,11 @@ $(function() {
         $("header").ScrollTo();
       });
 
+      // Move the loadedrecordform.aspace event to be before
+      // the ajaxForm is attached, so events (like the session check)
+      // can be bound to the form first.
+      $(document).triggerHandler("loadedrecordform.aspace", [$container]);
+
       $form.ajaxForm({
         data: {
           inline: true
@@ -95,8 +100,6 @@ $(function() {
       });
 
       AS.resetScrollSpy();
-
-      $(document).triggerHandler("loadedrecordform.aspace", [$container]);
 
       return $form;
     };
