--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <%= setup_context :type => :user, :title => "New Account" %>
 
-<%= form_for @user, :as => "createuser", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
+<%= form_for @user, :as => "createuser", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form public-form'} do |f| %>
 
 <div class="row-fluid">
    <div class="span12">
